; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan.c_magic_for_addr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan.c_magic_for_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @magic_for_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @magic_for_addr(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = and i32 %6, 65535
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %3, align 4
  %9 = ashr i32 %8, 16
  %10 = and i32 %9, 65535
  %11 = load i32, i32* %5, align 4
  %12 = xor i32 %11, %10
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %3, align 4
  %14 = ashr i32 %13, 32
  %15 = and i32 %14, 65535
  %16 = load i32, i32* %5, align 4
  %17 = xor i32 %16, %15
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %3, align 4
  %19 = ashr i32 %18, 48
  %20 = and i32 %19, 65535
  %21 = load i32, i32* %5, align 4
  %22 = xor i32 %21, %20
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %5, align 4
  %25 = xor i32 %24, %23
  store i32 %25, i32* %5, align 4
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
